syntax = "proto3";

package pd;

import "google/protobuf/timestamp.proto";
option go_package = "auth-service/pd";

message User {
  string uuid = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string userType = 6;
  string addedBy = 7;
  google.protobuf.Timestamp createdAt = 8;
  google.protobuf.Timestamp modifiedAt = 9;
}